# claydash

./: .gitignore  Cargo.toml  Makefile  README.md
assets/shaders/: all.wgsl  grid_material.wgsl
crates/bevy_command_central_egui/: Cargo.toml
crates/bevy_command_central_egui/src/: lib.rs
crates/bevy_command_central_plugin/: Cargo.toml
crates/bevy_command_central_plugin/src/: lib.rs
crates/bevy_sdf_object/: Cargo.toml
crates/bevy_sdf_object/src/: lib.rs
crates/claydash-ui/: Cargo.toml
crates/claydash-ui/src/: lib.rs
crates/claydash_data/: Cargo.toml
crates/claydash_data/src/: lib.rs
crates/claydash_scene_data/: Cargo.toml
crates/claydash_scene_data/src/: lib.rs
crates/claydash_ui/: Cargo.toml
crates/claydash_ui/src/: lib.rs
crates/command-central/: Cargo.toml
crates/command-central/src/: lib.rs
crates/command_central/: Cargo.toml
crates/command_central/src/: lib.rs
crates/observable_key_value_tree/: Cargo.toml
crates/observable_key_value_tree/src/: lib.rs
crates/observable_tree/: Cargo.toml
crates/observable_tree/src/: lib.rs
crates/sdf_consts/: Cargo.toml
crates/sdf_consts/src/: lib.rs
src/: bevy_sdf_object.rs  claydash_data.rs  claydash_ui.rs  command_central_egui.rs  command_central_plugin.rs  duck.rs  interactions.rs  main.rs  sdf_consts.rs  sdf_object.rs  undo_redo.rs
src/interactions/: control_points.rs  interaction_commands_and_shortcuts.rs
www/: index.html
