[workspace]
members = [
    "crates/claydash_data",
    "crates/sdf_consts"
]

[workspace.dependencies]
sdf_consts = { path = "crates/sdf_consts"}
bevy_sdf_object = { path = "crates/bevy_sdf_object" }
bevy = "0.11.3"
serde = "1.0.*"
serde_json = "1.0.*"
bevy_egui = "0.22.0"

[package]
name    = "claydash"
version = "0.0.0"
edition = "2021"

[dependencies]
sdf_consts = { workspace = true }
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy_egui = { workspace = true }
bevy_sdf_object = { workspace = true }
command-central = { path = "crates/command-central"}
bevy_command_central_plugin = { path = "crates/bevy_command_central_plugin"}
claydash-ui = { path = "crates/claydash-ui"}
claydash_data = { path = "crates/claydash_data"}
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
futures = "0.3"
js-sys = "0.3.60"
bevy_asset = "0.11.3"
bevy_reflect = "0.11.3"
bevy_pbr = "0.11.3"
bevy_framepace = "0.13.3"
bevy_mod_picking = "0.15.0"
smooth-bevy-cameras = "0.9.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
  'ReadableStreamDefaultReader',
  'Window',
]

[[bin]]
name = "main"
path = "./src/main.rs"

[profile.dev]
opt-level = 3
