[package]
name = "bevy_command_central_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
command_central = { workspace = true }
claydash_data = { workspace = true }
bevy_command_central_plugin = { workspace = true }
observable_key_value_tree = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
epaint = "0.23.0"
