[package]
name = "bevy_command_central_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command_central = { path = "../command_central"}
claydash_data = { path = "../claydash_data" }
bevy = { workspace = true }
bevy_app = { workspace = true }
