[package]
name = "bevy_sdf_object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdf_consts = { path = "../sdf_consts"}
claydash-ui = { path = "../claydash-ui"}
bevy = "0.11.3"
bevy_reflect = "0.11.3"
