[package]
name = "bevy_sdf_object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdf_consts = { workspace = true }
bevy = { workspace = true }
bevy_reflect = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
