[package]
name = "claydash_data"
version = "0.1.0"
edition = "2021"

[dependencies]
observable_key_value_tree = { path = "../observable_key_value_tree"}
bevy_sdf_object = { workspace = true }
bevy = { workspace = true }
sdf_consts = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }