[package]
name = "claydash_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command_central = { path = "../command_central"}
bevy_command_central_plugin = { path = "../bevy_command_central_plugin"}
bevy_command_central_egui = { path = "../bevy_command_central_egui"}
bevy = { workspace = true }
bevy_app = { workspace = true }
bevy_egui = { workspace = true }
epaint = "0.23.0"
