[package]
name = "claydash_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command_central = { workspace = true }
bevy_command_central_plugin = { workspace = true }
bevy_command_central_egui = { workspace = true }
observable_key_value_tree = { workspace = true }
claydash_data = { workspace = true }
bevy = { workspace = true }
bevy_app = { workspace = true }
bevy_egui = { workspace = true }
epaint = "0.23.0"
